--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   firebase_auth: ^6.1.0
   shared_preferences: ^2.5.3
   provider: ^6.1.5+1
-  http: ^1.2.2
+  http: ^1.5.0
+  flutter_stripe: ^12.0.2
 
 dev_dependencies:
   flutter_test:
